--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
       <artifactId>junit-jupiter-params</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk18on</artifactId>
+      <version>1.79</version>
+    </dependency>
     <dependency>
       <groupId>info.picocli</groupId>
       <artifactId>picocli</artifactId>
@@ -106,6 +112,17 @@
                         <goal>shade</goal>
                     </goals>
                     <configuration>
+                        <filters>
+                            <!-- Avoid "Exception in thread "main" java.lang.SecurityException: Invalid signature file digest for Manifest main attributes"-->
+                            <filter>
+                                <artifact>*:*</artifact>
+                                <excludes>
+                                    <exclude>META-INF/*.SF</exclude>
+                                    <exclude>META-INF/*.DSA</exclude>
+                                    <exclude>META-INF/*.RSA</exclude>
+                                </excludes>
+                            </filter>
+                        </filters>
                         <transformers>
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                 <mainClass>bloop.Main</mainClass> <!-- Replace with your main class -->
